test/libsolidity/syntaxTests/nameAndTypeResolution/195_positive_integers_to_unsigned_out_of_bound.sol
contract test {
    uint8 public x = 700;
}
// ----
// TypeError: (37-40): Type int_const 700 is not implicitly convertible to expected type uint8.
